--- a/arch/arm64/configs/elite_defconfig
+++ b/arch/arm64/configs/elite_defconfig
@@ -1710,8 +1710,8 @@ CONFIG_BCMDHD_PCIE=y
 # CONFIG_BCM4354 is not set
 # CONFIG_BCM4356 is not set
 CONFIG_BCM4359=y
-CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4359.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/calibration"
+CONFIG_BCMDHD_FW_PATH="/system/vendor/etc/firmware/fw_bcm4359.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/vendor/etc/calibration"
 CONFIG_BCMDHD_VENDOR_EXT=y
 CONFIG_DHD_USE_STATIC_BUF=y
 CONFIG_DHD_USE_SCHED_SCAN=y
