--- a/arch/arm/boot/dts/qcom/msm8996-htc-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-htc-common.dtsi
@@ -58,14 +58,14 @@
 
 	};
 
-	htc_ramoops@0 {
-		compatible = "htc,ramoops";
-		linux,contiguous-region = <&ramoops_mem>;
-		record-size = <0x00008000>;  /*  32 KB */
-		console-size = <0x00080000>; /* 512 KB */
-		pmsg-size = <0x00040000>;    /* 256 KB */
-		ftrace-size = <0x00020000>;  /* 128 KB */
-		dump-oops = <0x1>;
+	ramoops {
+        compatible = "ramoops";
+		status = "ok";
+		memory-region = <&ramoops_mem>;
+		console-size = <0x0 0x00080000>;
+		pmsg-size    = <0x0 0x00040000>;
+		record-size  = <0x0 0x00008000>;
+		ftrace-size  = <0x0 0x00020000>;
 	};
 
 	htc_battery_store {
@@ -78,7 +78,7 @@
 		qcom,stored-batt-overheat-sec = <0>; /* CONFIG_HTC_BATT_PCN0008 */
 		qcom,stored-batt-first-use = <0>; /* CONFIG_HTC_BATT_PCN0008 */
 		qcom,stored-batt-checksum = <0>; /* CONFIG_HTC_BATT_PCN0008 */
-    };
+	};
 };
 
 &soc {
